[package]
name = "paperdoll-tar"
version = "0.0.1-alpha.2"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "2D paper doll model"
edition = "2021"
homepage = "https://github.com/fralonra/paperdoll-tar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/paperdoll-tar"
keywords = ["paperdoll", "paperdoll-tar"]

[dependencies]
anyhow = "1.0"
image = "0.24"
paperdoll = "0.0.1-alpha.3"
serde_yaml = "0.9"
tar = "0.4"
tempdir = "0.3"
