[package]
name = "paperdoll-tar"
version = "0.1.0"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "2D paper doll model"
edition = "2021"
homepage = "https://github.com/fralonra/paperdoll-tar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/paperdoll-tar"
keywords = ["paperdoll", "paperdoll-tar"]
exclude = [".gitignore", ".github/*"]

[dependencies]
anyhow = "1.0"
image = "0.24"
paperdoll = "0.1.0"
serde_yaml = "0.9"
tar = "0.4"
tempdir = "0.3"
